Refactor `GridSearchModel` and `GridSearchEditor`:
- Replace `FisherZ` with `DegenerateGaussianLrt` in `markovCheckerIndependenceWrapper`.
- Improve class and name initialization to ensure index alignment.
- Transition to modern `switch` expressions for cleaner parameter handling.
- Add `NamedClass` record for efficient pairing and sorting of names with classes.
- Remove unused methods, commented-out code, and redundant logic for clarity and maintainability.